corrected spacing of upper main content in checkpoint 02

--- a/checkpoints/02/css/style.scss
+++ b/checkpoints/02/css/style.scss
@@ -394,7 +394,7 @@ footer {
       "search"
       "main-logo-content-form";
     .main-logo-content-form {
-      margin: 0 8% 15px 0;
+      margin: 0 8% 15px;
       grid-template: 60px 1fr 1fr / 1fr 1fr;
       grid-template-areas:
         "anaconda-logo signup-signin"
